fix: wrap header offset var in a body selector

--- a/common/common.scss
+++ b/common/common.scss
@@ -1445,8 +1445,9 @@ a.badge-notification {
   Adjust the quick access panel for the updated 
   discourse (early 2026)
 */
-
---header-offset: 112px; // the height of the Canonical header, plus the discourse header
+body {
+  --header-offset: 112px; // the height of the Canonical header, plus the discourse header
+}
 
 .user-menu .quick-access-panel .user-menu-button-all-notifications {
   flex-flow: column;
